--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,5 +1,19 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "90517b51",
+   "metadata": {},
+   "source": [
+    "# Bank Marketing Projet - Kylliann, Hippolyte, Axel\n",
+    "\n",
+    "1. Introduction\n",
+    "2. Procédé de développment de l'outil de prédiction (Nettoyage, Analyse exploratoire, Modélisation des données)\n",
+    "3. Réponse à la problématique\n",
+    "4. Conclusion"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
