add pycaret initialisation

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -647,6 +647,14 @@
     "\n",
     "Le dataset nettoyé est prêt à être utilisé dans PyCaret pour construire un modèle de classification.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f254376e",
+   "metadata": {},
+   "source": [
+    "### Bank Marketing Projet - Kylliann, Hippolyte, Axel"
+   ]
   }
  ],
  "metadata": {
