--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f64709dd",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
     "df = pd.read_csv(\"data/bank_marketing/bank/bank.csv\", sep=';')\n",
     "\n",
     "# Aperçu des premières lignes\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9febb438",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
     "df.info()\n",
     "\n",
     "# Valeurs manquantes\n",
-    "df.isnull().sum()\n"
+    "df.isnull().sum()"
    ]
   },
   {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0e05eb91",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
    ],
    "source": [
     "# Statistiques numériques\n",
-    "df.describe()\n"
+    "df.describe()"
    ]
   },
   {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9ec0f664",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
    ],
    "source": [
     "sns.countplot(x='y', data=df)\n",
-    "plt.title(\"Répartition de la variable cible (y)\")\n"
+    "plt.title(\"Répartition de la variable cible (y)\")"
    ]
   },
   {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f894d5f0",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
    ],
    "source": [
     "sns.histplot(df['age'], bins=30, kde=True)\n",
-    "plt.title(\"Distribution de l'âge\")\n"
+    "plt.title(\"Distribution de l'âge\")"
    ]
   },
   {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6a2e9e21",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
     "# Taux de 'yes' par type de job\n",
     "job_success_rate = df.groupby('job')['y'].value_counts(normalize=True).unstack()['yes']\n",
     "job_success_rate.sort_values(ascending=False).plot(kind='bar', color='green')\n",
-    "plt.title(\"Taux de souscription par emploi\")\n"
+    "plt.title(\"Taux de souscription par emploi\")"
    ]
   },
   {
@@ -629,7 +629,7 @@
     "#df_clean = df.dropna()\n",
     "\n",
     "# Vérification\n",
-    "#df_clean.isnull().sum().sum()\n"
+    "#df_clean.isnull().sum().sum()"
    ]
   },
   {
@@ -646,14 +646,6 @@
     "- Préparé un jeu de données propre pour la modélisation\n",
     "\n",
     "Le dataset nettoyé est prêt à être utilisé dans PyCaret pour construire un modèle de classification.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f254376e",
-   "metadata": {},
-   "source": [
-    "### Bank Marketing Projet - Kylliann, Hippolyte, Axel"
    ]
   }
  ],
